tests/error/misc_errors/span_indented_struct.py
from guppylang.decorator import guppy


def build():
    @guppy.struct
    class Foo:
        x: "blah"

    return Foo


guppy.compile(build())
