tests/error/misc_errors/span_indented_struct.err
Error: Variable not defined (at $FILE:7:12)
  | 
5 |     @guppy.struct
6 |     class Foo:
7 |         x: "blah"
  |             ^^^^ `blah` is not defined

Guppy compilation failed due to 1 previous error
